src/test/deca/context/valid/method_with_decl_before_inst.deca
/*
    Description : Test sur la gestion de de l'ordre des déclarations et paramètres dans une méthode

    Resultat : OK
*/
class A{
    void x(){int y;println("Hello");}
}
